welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:21: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:24: error: expected start of definition
	override def forward()  {
                 ^ZigZag:27: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:30: error: expected start of definition
	override def backward() {
                 ^ZigZag:33: error: Unmatched closing brace '}' ignored here
}
^